patch canrea/canwrite

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -40,7 +40,7 @@
         <div class='form-group'>
         <i class='fas fa-fw fa-eye' title='Visibility'></i>
         <label for='canread_select'>{{ 'Visibility'|trans }}</label>
-        <select id='canread_select' class='permissionSelect form-control' data-rw='read'>
+        <select id='canread_select' class='permissionSelect form-control' data-rw='canread'>
           {% for key, value in visibilityArr %}
             <option value='{{ key }}'
             {{ Entity.entityData.canread == key ? ' selected' }}
@@ -50,7 +50,7 @@
         <!-- CAN WRITE -->
         <i class='fas fa-fw fa-pencil-alt' title='Can write'></i>
         <label for='canwrite_select'>{{ 'Can write'|trans }}</label>
-        <select id='canwrite_select' class='permissionSelect form-control' data-rw='write'>
+        <select id='canwrite_select' class='permissionSelect form-control' data-rw='canwrite'>
           {% for key, value in visibilityArr %}
             <option value='{{ key }}'
             {{ Entity.entityData.canwrite == key ? ' selected' }}
