rename name to title for items_types and status
rename getViewPage() to getPage() and switch to edit mode after creation

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -263,7 +263,7 @@
       <ul class='list-inline'>
         <li class='list-inline-item'>
           <label for='itemsTypesName'>{{ 'Name'|trans }}</label>
-          <input type='text' class='form-control' id='itemsTypesName' value='{{ Entity.entityData.name|raw }}' />
+          <input type='text' class='form-control' id='itemsTypesName' value='{{ Entity.entityData.title|raw }}' />
         </li>
 
         <li class='list-inline-item col-1 align-top'>
