--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -124,7 +124,7 @@
                         </a>
                       </div>
                       <i class='fas fa-link mr-1'></i>
-                      <span class='item-category' style='color:#{{ link.color|raw }}'>{{ link.name|raw }}</span> - <a href='database.php?mode=view&id={{ link.itemid }}'>
+                      <span class='item-category' style='color:#{{ link.color|raw }}'>{{ link.category|raw }}</span> - <a href='database.php?mode=view&id={{ link.itemid }}'>
                       {{ link.title|raw }}</a>
                       <!-- container to hold the body of the entity if it is toggled with the +/- icon -->
                       <!-- a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well -->
