add event and events endpoints
rework massively the internal Scheduler code

--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -28,9 +28,9 @@
         <!-- START AND END TIMES -->
         <div class='mt-2'>
           <label for='schedulerEventModalStart'>{{ 'Start time'|trans }}</label>
-          <input id='schedulerEventModalStart' class='form-control' type='datetime-local' data-what='start' value='' />
+          <input id='schedulerEventModalStart' class='form-control' type='datetime-local' data-what='start_epoch' value='' />
           <label for='schedulerEventModalEnd'>{{ 'End time'|trans }}</label>
-          <input id='schedulerEventModalEnd' class='form-control' type='datetime-local' data-what='end' value='' />
+          <input id='schedulerEventModalEnd' class='form-control' type='datetime-local' data-what='end_epoch' value='' />
         </div>
 
         <!-- BIND EXPERIMENT -->
