--- a/src/templates/qr-pdf.html
+++ b/src/templates/qr-pdf.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang='en'>
   <head>
+    <title>QR Codes PDF</title>
     <style>{{ css }}</style>
     {{ useCjk ? '<style>td { font-family:sun-extA; }</style>' }}
   </head>
