--- a/src/templates/invalid-schema.html
+++ b/src/templates/invalid-schema.html
@@ -26,7 +26,7 @@
         margin-top: 10%;
       }
       pre {
-        font-family: 'courier new';
+        font-family: 'courier new', Courier, sans-serif;
         background-color: #000;
         padding: 10px;
         border-radius: 5px;
