--- a/src/templates/pdf.html
+++ b/src/templates/pdf.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang='en'>
   <head>
+    <title>{{ endityData.title }}</title>
     <style>{{ css|raw }}</style>
     {{ useCjk ? '<style>td { font-family:sun-extA; }</style>' }}
   </head>
@@ -111,7 +113,7 @@
   </section>
 {% endif %}
 
-<table id='infoblock'>
+<table id='infoblock' role='presentation'>
   <tr>
     <td class='noborder'>
       <barcode code='{{ url|raw }}' type='QR' class='barcode' size='0.8' error='M' />
