--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -119,7 +119,7 @@
 
 <section class='box'>
     <h5><i class='fas fa-users'></i> {{ 'Members'|trans }}</h5>
-    <table id='teamtable' class='table'>
+    <table id='teamtable' class='table' aria-describedby='pageTitle'>
         <tr>
             <th>{{ 'Name'|trans }}</th>
             <th>{{ 'Email'|trans }}</th>
