--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -206,7 +206,7 @@
 <!-- UPLOAD FORM -->
 <section class='box'>
   <h3 class='d-inline'><i class='fas fa-fw fa-paperclip'></i> {{ 'Attach a file'|trans }}</h3>
-  <form action='app/controllers/EntityAjaxController.php' class='dropzone mt-2' id='elabftw-dropzone'></form>
+  <form action='api/v2/{{ Entity.page }}/{{ Entity.id }}/uploads' class='dropzone mt-2' id='elabftw-dropzone'></form>
 </section>
 
 {% include 'uploads.html' %}
