remove cornify and add another one

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -15,7 +15,7 @@
         <i title='Gitter' class='fas fa-comment-dots fa-lg'></i>
     </a>
 
-    <a class='elab-tooltip-top' style='color:#343434' href='https://github.com/elabftw/elabftw/issues/new/choose'>
+    <a class='elab-tooltip-top' data-action='report-bug' style='color:#343434' href='#'>
       <span>{{ 'Submit feedback'|trans }}</span>
         <i title='Report bug' class='fas fa-bug fa-lg'></i>
     </a>
