allow using "me" for our own userid

--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -328,7 +328,7 @@
     </div>
 
     <div class='mt-4 text-center'>
-      <button data-action='patch-account' data-userid='{{ App.Users.userData.userid }}' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
+      <button data-action='patch-account' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
     </div>
   </div>
 </div>
