make the brand logo in navbar disappear sooner
and fix favtagsopener

--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -56,7 +56,7 @@
     </button>
     {% endif %}
     <!-- logo -->
-    <a href='index.php'><img class='navbar-brand' src='assets/images/logo-header.png' width='110' height='40' alt='elabftw' /></a>
+    <a href='index.php'><img class='navbar-brand d-xs-none d-sm-none d-lg-none d-xl-block' src='assets/images/logo-header.png' width='110' height='40' alt='elabftw' /></a>
 
     {% if App.Session.has('is_auth') %}
     <!-- everything in there will be part of the burger -->
