--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -392,10 +392,10 @@
       <tr>
         <td>{{ notif.designation }}</td>
         <td>
-          <input type='checkbox' data-trigger='change' data-model='user' data-target='{{ notif.setting }}' {{ App.Users.userData[notif.setting] == 1 ? " checked='checked'" }} />
+          <input type='checkbox' data-trigger='change' data-model='users/me' data-target='{{ notif.setting }}' {{ App.Users.userData[notif.setting] == 1 ? " checked='checked'" }} />
         </td>
         <td>
-          <input type='checkbox' data-trigger='change' data-model='user' data-target='{{ notif.setting }}_email' {{ App.Users.userData[notif.setting ~ '_email'] == 1 ? " checked='checked'" }}/>
+          <input type='checkbox' data-trigger='change' data-model='users/me' data-target='{{ notif.setting }}_email' {{ App.Users.userData[notif.setting ~ '_email'] == 1 ? " checked='checked'" }}/>
         </td>
       </tr>
     {% endfor %}
