--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -106,7 +106,7 @@
                 {# don't make the thumbnail clickable if it's a tif #}
                 {% if ext matches '/(jpg|jpeg|png|gif|pdf|eps|svg|heic)$/i' %}
                   <div class='text-center'>
-                    <a class='text-break' href='app/download.php?f={{ upload.long_name }}&storage={{ upload.storage }}'
+                    <a class='text-break' href='app/download.php?f={{ upload.long_name }}&storage={{ upload.storage }}&name={{ upload.real_name }}'
                        {% if upload.real_name matches '/(jpg|jpeg|png|gif)$/i' %}
                            data-fancybox='group'
                        {% endif %}
@@ -119,7 +119,7 @@
                 {# old timestamp pdf don't have a thumbnail, so don't try to display one for them #}
                 {% if App.Users.userData.uploads_layout %}
                   {% if ext matches '/(jpg|jpeg|png|gif|tif|tiff|pdf|eps|svg|heic)$/i' %}
-                    <img class='thumb img-thumbnail rounded' class='text-break' src='app/download.php?f={{ thumb_name }}&storage={{ upload.storage }}' alt='thumbnail' />
+                    <img class='thumb img-thumbnail rounded' class='text-break' src='app/download.php?f={{ thumb_name }}&storage={{ upload.storage }}&name={{ upload.real_name }}' alt='thumbnail' />
                   {% else %}
                     <i class='fas {{ ext2icon(ext) }} thumb rounded mx-auto d-block text-center'></i>
                   {% endif %}
@@ -130,7 +130,7 @@
                 {% endif %}
                             {% elseif ext == 'mol' %}
                             <div class='text-center'>
-                              <canvas class='molFile' id='molFile_{{ upload.id }}' data-molpath='app/download.php?f={{ upload.long_name }}&storage={{ upload.storage }}'></canvas>
+                              <canvas class='molFile' id='molFile_{{ upload.id }}' data-molpath='app/download.php?f={{ upload.long_name }}&storage={{ upload.storage }}&name={{ upload.real_name }}'></canvas>
                             </div>
                             {% elseif ext in constant('Elabftw\\Elabftw\\Extensions::MOLECULE') %}
                                 <!--  build control dropdown to change the representation style -->
@@ -166,7 +166,7 @@
 
                                 <!-- IMPORTANT: here the data-href has the storage first and the filename last or 3Dmol will get confused with the format -->
                                 <div class='viewer_3Dmoljs file-uploaded'
-                                  data-href='app/download.php?storage={{ upload.storage }}&f={{ upload.long_name }}'
+                                  data-href='app/download.php?storage={{ upload.storage }}&f={{ upload.long_name }}&name={{ upload.real_name }}'
                                   data-style="{{ ext == 'pdb' ? 'cartoon:color=spectrum' : 'stick'}}"
                                   data-backgroundcolor='0xffffff'
                                   id='3Dmol_{{ upload.id }}'>
@@ -174,7 +174,7 @@
 
             {% elseif ext in constant('Elabftw\\Elabftw\\Extensions::DNA') %}
               <div class='viewer-ove'
-                data-href='app/download.php?f={{ upload.long_name }}&storage={{ upload.storage }}'
+                data-href='app/download.php?f={{ upload.long_name }}&storage={{ upload.storage }}&name={{ upload.real_name }}'
                 data-real-name='{{ upload.real_name }}'
                 id='OVE_{{ upload.id }}'>
               </div>
